# freezing-model

./: .gitignore  MANIFEST.in  README.md  alembic.ini  development.cfg  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  test.cfg
.github/workflows/: lint.yml
freezing/model/: __init__.py  autolog.py  config.py  exc.py  meta.py  migrationsutil.py  monkeypatch.py  orm.py  satypes.py
freezing/model/migrations/: env.py  script.py.mako
freezing/model/migrations/versions/: 07849cbfaed7_add_activity_visibility.py  1259f25794b5_add_ride_errors.py  12a5e1aff276_.py  17b73a90925d_ride_tracks.py  180c13f61b54_athlete_cols.py  18a82f58b63c_add_strava_2018_new_tokens.py  21518d40552c_add_ride_resync_date.py  22183530616d_photo_ref_null.py  23c3b1c5ffb0_.py  3361172cfdc9_add_access_token.py  3e51578560f0_add_ride_temp.py  41c3e58a61aa_bookkeeping.py  4874dd6f743c_create_ride_photos.py  48b2ed7eba89_create_tribes.py  48e1dd00cbd8_add_photo_uid.py  505b1bd433d8_team_images.py  54627e8199c9_photos_fetched_null.py  54675468b7bb_manual_column.py  56a0f0a1f30d_add_ride_private_col.py  628c4c0afbd_bigint_ids.py  65e22ab36882_new_streams.py  68114fe044fb_add_geospatial_indexes.py  6cca33764ed5_reverse_track_coords.py  74b6566816aa_observer_teams.py  83d3e920ac3d_add_wind.py  8925b9da7d7_drop_global_privacy_col.py  9a3b4a159362_fix_daily_scores_again.py  9b7cf7603b70_declining_points_system.py  9ec05cbe5ff5_drop_manual_column.py  a3aee1eb0fb_add_athlete_display_name.py  a77103b34b0b_real_utf8.py  b4b227f95848_fix_type_of_refresh_token_column.py  b4d003c71167_fix_daily_scores.py  c206a3641567_reverse_coordinates.py  c5bfe51cfec3_nullable_ride_photos_ref.py  ca3d5036d720_photo_fields.py  d1119fc76e42_add_ride_type.py  d4be89cbab08_add_ride_resync_count.py  dd2e35777af9_.py  e73674800c6e_add_ride_description.py  (+2 more)
freezing/model/msg/: __init__.py  mq.py  strava.py
