[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freezing-model"
version = "0.9.0"
description = "shared database model and message definitions for Freezing Saddles"
readme = "README.md"
authors = [
    {name = "Hans Lellelid", email = "$hans@xmpl.org"},
    {name = "Merlin Hughes", email = "merlin@merlin.org"},
    {name = "Richard Bullington-McGuire", email = "richard.bullington.mcguire@gmail.com"},
    {name = "Samuel Frantz", email = "sfrantz@gwu.edu"},
]
maintainers = [
    {name = "Richard Bullington-McGuire", email="richard.bullington.mcguire@gmail.com"},
]
license = {text = "Apache License (2.0)"}
dependencies = [
    "GeoAlchemy @ https://github.com/hozn/GeoAlchemy/archive/0.7.3dev1.tar.gz",
    "PyMySQL==1.1.1",
    "SQLAlchemy==1.3.24",
    "alembic==0.9.7",
    "colorlog==4.1.0",
    "marshmallow-enum @ https://github.com/lyft/marshmallow_enum/archive/support-for-marshamallow-3.tar.gz",
    "marshmallow==3.23.1",
    "pytz==2024.2",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3'
]

[project.optional-dependencies]
lint = [
    "black==24.3.0",
    "flake8==7.0.0",
    "flake8-pyproject==1.2.3",
    "isort==5.13.2",
]

[tool.isort]
profile = "black"

[tool.flake8]
# Thanks https://www.reddit.com/r/learnpython/comments/rr6y69/comment/hqeqt68/?utm_source=share&utm_medium=web2x&context=3
ignore = ["E203", "W503", "E501"]
max-line-length = 88
max-complexity = 39
extend-ignore = "E203"
